--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Example for using serve-grip with WebSockets-over-HTTP in Express",
+  "engines" : { "node" : ">=0.12" },
   "scripts": {
     "dev": "nodemon",
     "prod": "ts-node --files ./src/server.ts"
