--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "description": "Example for using serve-grip with WebSockets-over-HTTP in Express",
-  "engines" : { "node" : ">=0.12" },
+  "engines" : { "node" : ">=12.0.0" },
+  "engineStrict": true,
   "scripts": {
     "dev": "nodemon",
     "prod": "ts-node --files ./src/server.ts"
