--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
         "paths": {
             "*": [
                 "node_modules/*",
-                "src/types/*"
+                "types/*"
             ]
         },
         "typeRoots": [
@@ -21,7 +21,6 @@
         ]
     },
     "include": [
-        "src/server.ts" ,
-        "types/*/*"
+        "./*" ,
      ],
 }
