adding build command

--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,7 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+# # Elastic Beanstalk Files
+# .elasticbeanstalk/*
+# !.elasticbeanstalk/*.cfg.yml
+# !.elasticbeanstalk/*.global.yml
