--- a/package.json
+++ b/package.json
@@ -1,24 +1,45 @@
 {
   "name": "express-ws",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "private": true,
   "description": "Example for using serve-grip with WebSockets-over-HTTP in Express",
-  "engines" : { "node" : "12.9.1" },
+  "engines": {
+    "node": "12.9.1"
+  },
   "engineStrict": true,
   "scripts": {
-    "dev": "nodemon",
-    "prod": "ts-node --files ./server.ts"
+    "prestart": "yarn build",
+    "start": "node build/src/main.js",
+    "clean": "rimraf coverage build tmp",
+    "build": "tsc -p tsconfig.release.json",
+    "build:watch": "tsc -w -p tsconfig.release.json",
+    "lint": "eslint . --ext .ts",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "author": "Egan Bisma <cendoloverboba@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@fanoutio/grip": "^3.0.3",
-    "@fanoutio/serve-grip": "^1.1.7-beta.2",
-    "@types/express": "^4.17.9",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@fanoutio/grip": "3.0.3",
+    "@fanoutio/serve-grip": "1.1.7-beta.2",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "ts-node": "9.1.1"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.9",
+    "@types/jest": "26.0.15",
+    "@types/node": "14.14",
+    "@typescript-eslint/eslint-plugin": "4.7.0",
+    "@typescript-eslint/parser": "4.7.0",
+    "eslint": "7.13.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-jest": "24.1.3",
+    "jest": "26.6.3",
+    "prettier": "2.1.2",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.4.4",
+    "tsutils": "3.17.0",
+    "typescript": "4.0.5"
   }
 }
