--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "engineStrict": true,
   "scripts": {
-    "prestart": "yarn build",
+    "prestart": "npm run build",
     "start": "node build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "build": "tsc -p tsconfig.release.json",
