--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "nodemon": "^2.0.6",
-    "ts-node": "9.1.1"
+    "ts-node": "9.1.1",
+    "typescript": "4.0.5"
   },
   "devDependencies": {
     "@types/express": "4.17.9",
@@ -41,7 +42,6 @@
     "prettier": "2.1.2",
     "rimraf": "3.0.2",
     "ts-jest": "26.4.4",
-    "tsutils": "3.17.0",
-    "typescript": "4.0.5"
+    "tsutils": "3.17.0"
   }
 }
