--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
   "dependencies": {
     "@fanoutio/grip": "3.0.3",
     "@fanoutio/serve-grip": "1.1.7-beta.2",
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.14",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "nodemon": "^2.0.6",
     "ts-node": "9.1.1",
+    "tslib": "^2.0.3",
     "typescript": "4.0.5"
   },
   "devDependencies": {
-    "@types/express": "4.17.9",
     "@types/jest": "26.0.15",
-    "@types/node": "14.14",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
     "eslint": "7.13.0",
