--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "engineStrict": true,
   "scripts": {
-    "start": "node src/main.js",
+    "prestart": "npm run build",
+    "start": "node build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "build": "tsc -p tsconfig.release.json",
-    "build:watch": "tsc -w -p tsconfig.release.json",
     "dev": "nodemon",
+    "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "eslint . --ext .ts",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
@@ -23,13 +24,16 @@
     "@fanoutio/grip": "3.0.3",
     "@fanoutio/serve-grip": "1.1.7-beta.2",
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.17.9",
     "@types/node": "^14.14.14",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "grip": "^1.6.0",
+    "ioredis": "^4.19.4",
     "nodemon": "^2.0.6",
     "ts-node": "9.1.1",
-    "tslib": "^2.0.3",
-    "typescript": "4.0.5"
+    "typescript": "4.0.5",
+    "uWebSockets.js": "uNetworking/uWebSockets.js#v18.11.0"
   },
   "devDependencies": {
     "@types/jest": "26.0.15",
