--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@types/express": "^4.17.9",
     "@types/ioredis": "^4.17.9",
     "@types/node": "^14.14.14",
+    "bullmq": "^1.12.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "grip": "^1.6.0",
-    "ioredis": "^4.19.4",
+    "ioredis": "^4.17.3",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "ts-node": "9.1.1",
     "tslib": "^2.0.3",
