--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,15 +1,13 @@
 branch-defaults:
   main:
     environment: spotifyvstheworld-server-dev
-    group_suffix: null
 environment-defaults:
   spotifyvstheworld-server-dev:
-    branch: main
-    repository: beanstalk-test
+    branch: null
+    repository: null
 global:
   application_name: spotifyvstheworld-server
-  branch: main
-  default_ec2_keyname: aws-eb
+  default_ec2_keyname: custom-key-pair-to-ssh
   default_platform: Node.js 12 running on 64bit Amazon Linux 2
   default_region: us-west-2
   include_git_submodules: true
@@ -17,6 +15,5 @@ global:
   platform_name: null
   platform_version: null
   profile: null
-  repository: beanstalk-test
   sc: git
   workspace_type: Application
