--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,8 @@ dist
 # !.elasticbeanstalk/*.global.yml
 
 build/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
