--- a/package.json
+++ b/package.json
@@ -21,22 +21,18 @@
   "author": "Egan Bisma <cendoloverboba@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@fanoutio/grip": "3.0.3",
-    "@fanoutio/serve-grip": "1.1.7-beta.2",
-    "@types/express": "^4.17.9",
     "@types/ioredis": "^4.17.9",
     "@types/node": "^14.14.14",
     "bullmq": "^1.12.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "grip": "^1.6.0",
+    "fastify": "^3.9.2",
     "ioredis": "^4.17.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "ts-node": "9.1.1",
     "tslib": "^2.0.3",
-    "typescript": "4.0.5",
-    "uWebSockets.js": "uNetworking/uWebSockets.js#v18.11.0"
+    "typescript": "4.0.5"
   },
   "devDependencies": {
     "@types/jest": "26.0.15",
