--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "@types/ioredis": "^4.17.9",
     "@types/node": "^14.14.14",
-    "bullmq": "^1.12.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "fastify": "^3.9.2",
+    "fastify-rate-limit": "^5.0.1",
     "ioredis": "^4.17.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
