--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "description": "Example for using serve-grip with WebSockets-over-HTTP in Express",
-  "engines": {
-    "node": "12.9.1"
-  },
-  "engineStrict": false,
   "scripts": {
     "prestart": "npm run build",
     "start": "node build/src/main.js",
@@ -23,11 +19,13 @@
   "dependencies": {
     "@types/ioredis": "^4.17.9",
     "@types/node": "^14.14.14",
+    "@types/node-fetch": "^2.5.8",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "fastify": "^3.9.2",
     "fastify-rate-limit": "^5.0.1",
     "ioredis": "^4.17.3",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "ts-node": "9.1.1",
     "tslib": "^2.0.3",
