--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "express": "4.17.1",
     "fastify": "^3.9.2",
     "fastify-rate-limit": "^5.0.1",
-    "ioredis": "^4.17.3",
+    "handy-redis": "^2.2.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
+    "redis": "^3.0.2",
     "ts-node": "9.1.1",
     "tslib": "^2.0.3",
     "typescript": "4.0.5"
