--- a/package.json
+++ b/package.json
@@ -20,17 +20,22 @@
     "@types/ioredis": "^4.17.9",
     "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.5.8",
+    "@types/ws": "^7.4.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "fastify": "^3.9.2",
+    "fastify-cors": "^5.1.0",
     "fastify-rate-limit": "^5.0.1",
+    "fastify-schedule": "^1.0.0",
     "handy-redis": "^2.2.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "redis": "^3.0.2",
+    "toad-scheduler": "^1.0.2",
     "ts-node": "9.1.1",
     "tslib": "^2.0.3",
-    "typescript": "4.0.5"
+    "typescript": "4.0.5",
+    "ws": "^7.4.2"
   },
   "devDependencies": {
     "@types/jest": "26.0.15",
